fix overlap

--- a/src/components/item-search/index.css
+++ b/src/components/item-search/index.css
@@ -15,6 +15,7 @@
     position: absolute;
     top: 56px;
     width: 100%;
+    z-index: 1;
 }
 
 .search-result-wrapper {
